--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ input[type="password"]{
 }
 
 a.link {
-  color: #b9d1ff;
+  color: #7dd3fc;
   text-decoration: none;
   border-bottom: 1px dashed rgba(185,209,255,.5);
 }
@@ -272,4 +272,5 @@ h1, h2, .label {
   color: #bae6fd;              /* hover 更亮 */
   text-decoration: underline;
 }
+
 
